<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="FfuSpeed" Id="{07f09ecb-fb49-4dc2-8e50-06b4edcb71d2}">
    <Declaration><![CDATA[TYPE FfuSpeed :
STRUCT
	NonScaledSpeedValue	: UINT;
	ScaledSpeedValue	: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>