<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="ScaleSpeed" Id="{f2fb93aa-4683-43c7-87a6-d19d37e1f8b5}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION ScaleSpeed : UINT
VAR_INPUT
	iSpeed : UINT;
	SpeedMatrix	: ARRAY[0..Constants.speedMatrixSize] OF FfuSpeed;
END_VAR
VAR
	i : UINT;
	found	: BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR i:= 1 TO Constants.speedMatrixSize DO
	IF (SpeedMatrix[i].NonScaledSpeedValue = iSpeed) THEN
		ScaleSpeed := SpeedMatrix[i].ScaledSpeedValue;
		found := TRUE;
	EXIT;
	END_IF
END_FOR

IF NOT found THEN
	ScaleSpeed := 0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="ScaleSpeed">
      <LineId Id="7" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="20" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>